# reproduce

./: .envrc  .gitignore  CMakeLists.txt  README.md  default.nix  flake-module.nix  flake.nix  run.sh  shell.nix  treefmt.nix
include/: cstd.h  events.h  hashtable.h  proc_init.h  putils.h  uthash.h
reproduce/: CMakeLists.txt  default.nix  flake-module.nix  run.sh  shell.nix
reproduce/include/: uthash.h  vdso.h
reproduce/src/: main.c  syscalls.c  vdso.c
reproduce/tests/: conftest.py  temporary_dir.py  test_printrandom.py  test_reproducible.py
src/: events.c  hashtable.c  printrandom.c  proc_init.c  putils.c
tests/: conftest.py  temporary_dir.py  test_printrandom.py  test_reproducible.py
